<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="redixbit.sevenminuteworkout.Home" >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/title" >

        <Button
            android:id="@+id/btn_home_setting"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/setting_button" />

        <TextView
            android:id="@+id/txttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/sevenminute"
            android:textColor="#fff"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="4dp"
            android:layout_toLeftOf="@+id/txttitle"
            android:text="@string/seven"
            android:textColor="#fff"
            android:textSize="32dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:stretchColumns="0,1,2,3" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:id="@+id/ll_aboutus"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:background="@drawable/about_us_unpress"
                android:gravity="bottom|center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/about"
                    android:textColor="#fff"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_instruction"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:background="@drawable/instruction_unpress"
                android:gravity="bottom|center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_instruction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/instructionhome"
                    android:textColor="#fff"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_more"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:background="@drawable/more_app_unpress"
                android:gravity="bottom|center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_moreapp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/moreapp"
                    android:textColor="#fff"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_rate"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_column="3"
                android:background="@drawable/rate_us_unpress"
                android:gravity="bottom|center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_rateus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/rateus"
                    android:textColor="#fff"
                    android:textSize="10dp" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tableLayout"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true" >

<!--        <com.google.android.gms.ads.AdView-->
<!--            android:id="@+id/adView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_alignParentTop="true"-->
<!--            ads:adSize="BANNER"-->
<!--            ads:adUnitId="@string/bannerkey" >-->
<!--        </com.google.android.gms.ads.AdView>-->

        <com.startapp.sdk.ads.banner.Banner
            android:id="@+id/startAppBanner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/start_circle"
            android:text="@string/start"
            android:textColor="#000"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_start"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/homestate"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/darkcolor"
            android:textSize="15dp" />
    </RelativeLayout>

</RelativeLayout>