<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff" >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/title" >

        <TextView
            android:id="@+id/txttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/aboutus"
            android:textColor="#fff"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/aboutuspara1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/darkcolor"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/aboutuspara2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/darkcolor"
        android:textSize="14dp" />







<!--    <com.google.android.gms.ads.AdView-->
<!--        android:id="@+id/adView"-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        ads:adSize="BANNER"-->
<!--        ads:adUnitId="@string/bannerkey" >-->
<!--    </com.google.android.gms.ads.AdView>-->

</RelativeLayout>