<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff" >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        
        android:background="@drawable/title" >

        <TextView
            android:id="@+id/txttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/instruction"
            android:textColor="#fff"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginTop="15dp"
        android:stretchColumns="0,1" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30dp" >

            <RelativeLayout
                android:id="@+id/RL_SevenMinute"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_column="0"
                android:layout_marginLeft="15dp"
                android:background="@color/blue" >

                <TextView
                    android:id="@+id/txt_minute"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/minwork"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RL_EXE"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_column="1"
                android:layout_marginRight="15dp"
                android:background="@color/orange" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/exercise"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/RL_7min_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tableLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" >

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
           
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout7"
                    android:layout_centerHorizontal="true"
                    android:text="@string/instructionpara1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/darkcolor"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/scrollView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/instructionpara2"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/darkcolor"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/instructionpara3"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/darkcolor"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/scrollView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/instructionpara4"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/darkcolor"
                    android:textSize="15dp" />
            </LinearLayout>
        </ScrollView>

       
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RL_EXE_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tableLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" >

            <LinearLayout
                android:id="@+id/ll_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>
        
    </RelativeLayout>

    <com.startapp.sdk.ads.banner.Banner
        android:id="@+id/startAppBanner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

<!--    <com.google.android.gms.ads.AdView-->
<!--        android:id="@+id/adView"-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        ads:adSize="BANNER"-->
<!--        ads:adUnitId="@string/bannerkey" >-->
<!--    </com.google.android.gms.ads.AdView>-->

</RelativeLayout>